# HMPP

./: .gitignore  Makefile  Makefile.Debug  Makefile.Release  README.md  allruledescriptdialog.cpp  allruledescriptdialog.h  allruledescriptdialog.ui  challengequestionmanager.cpp  challengequestionmanager.h  challengequestionmanagerdialog.cpp  challengequestionmanagerdialog.h  challengequestionmanagerdialog.ui  chatgptclient.cpp  chatgptclient.h  codeanalyzeconfigdialog.cpp  codeanalyzeconfigdialog.h  codeanalyzeconfigdialog.ui  cscrtoolbugset.cpp  cscrtoolbugset.h  cscrtoolchallengerquestion.h  cscrtooldialog.ui  document1.txt  faultinstance.cpp  faultinstance.h  faultlinehighlighter.cpp  faultlinehighlighter.h  faultpromptdialog.cpp  faultpromptdialog.h  faultpromptdialog.ui  guidewizard.cpp  guidewizard.h  highlighter.cpp  highlighter.h  issue.cpp  issue.h  issuemanager.cpp  issuemanager.h  main.cpp  mainwindow.cpp  (+37 more)
api-key/: api-key.txt
debug/: moc_allruledescriptdialog.cpp  moc_challengequestionmanagerdialog.cpp  moc_chatgptclient.cpp  moc_codeanalyzeconfigdialog.cpp  moc_faultinstance.cpp  moc_faultlinehighlighter.cpp  moc_faultpromptdialog.cpp  moc_guidewizard.cpp  moc_highlighter.cpp  moc_issuemanager.cpp  moc_mainwindow.cpp  moc_managepropertysetdialog.cpp  moc_mdichild.cpp  moc_requirementtreeview.cpp  moc_ruledescriptdialog.cpp  moc_screenfactor.cpp  moc_selectnewclassdialog.cpp  qrc_ui_images.cpp
demo/: demo.cpp
example/: main.cpp  student.cpp
introduction/: Introduction of HMPP tool.pptx
testcode/: cscrtool.txt  defaultQuestion.json  demoCode.cpp  document1.txt  informal spec.txt  review1.txt  review1_demoCode.cpp  review1_void_CameraController__configureVideoSettings.txt  review2_demoCode.cpp  review2_void_VideoRecorder__startRecording.txt  review3_demoCode.cpp  review3_void_VideoRecorder__writeMetadataHeader.txt  review_void_BuildProFromSpecDialog__addItemsFromStringList.txt  spec2.txt  spec3.txt  specBWC.txt  specBWC_test.txt  test1.json  test123.json  test2.json  test3.json  testFor1.json  test_student.txt
testcode/01081553/: CMakeLists.txt
testcode/01081603/: CMakeLists.txt
testcode/01081615/: CMakeLists.txt
testcode/01081626/: CMakeLists.txt
testcode/01091407/: CMakeLists.txt
testcode/01091414/: CMakeLists.txt
testcode/01091423/: CMakeLists.txt
testcode/01091521/: CMakeLists.txt
testcode/01091523/: CMakeLists.txt
testcode/01091531/: CMakeLists.txt
testcode/01091541/: CMakeLists.txt
testcode/01091553/: CMakeLists.txt
testcode/01101530/: CMakeLists.txt
testcode/01101534/: CMakeLists.txt
testcode/01101545/: CMakeLists.txt
testcode/01101617/: CMakeLists.txt
testcode/01101618/: CMakeLists.txt
testcode/01131417/: CMakeLists.txt
testcode/01131425/: CMakeLists.txt
testcode/01131435/: CMakeLists.txt
testcode/01131450/: CMakeLists.txt
testcode/01131505/: CMakeLists.txt
testcode/01131518/: CMakeLists.txt
testcode/01131522/: CMakeLists.txt
testcode/01131525/: CMakeLists.txt
testcode/01131531/: CMakeLists.txt
testcode/01131539/: CMakeLists.txt
testcode/01131552/: CMakeLists.txt
testcode/01131558/: CMakeLists.txt
testcode/01141520/: CMakeLists.txt
testcode/01141524/: CMakeLists.txt
testcode/01141528/: CMakeLists.txt
testcode/01141532/: CMakeLists.txt
testcode/01141554/: CMakeLists.txt
testcode/01141557/: CMakeLists.txt
testcode/01141558/: CMakeLists.txt
testcode/01151606/: CMakeLists.txt
testcode/01171541/: CMakeLists.txt
testcode/01171544/: CMakeLists.txt
testcode/01171558/: CMakeLists.txt
testcode/01171558/include/: PolicemanInfo.h  VideoRecorder.h
testcode/01171558/src/: CameraController.cpp  PolicemanInfo.cpp  VideoRecorder.cpp
testcode/01231533/: CMakeLists.txt
testcode/01231547/: CMakeLists.txt
testcode/01241331/: CMakeLists.txt
testcode/01271433/: CMakeLists.txt
testcode/01271443/: CMakeLists.txt
testcode/01271445/: CMakeLists.txt
testcode/02031421/: CMakeLists.txt
testcode/02031453/: CMakeLists.txt
testcode/02031455/: CMakeLists.txt
testcode/02031500/: CMakeLists.txt
testcode/02031504/: CMakeLists.txt
testcode/02031505/: CMakeLists.txt
testcode/02031511/: CMakeLists.txt
testcode/02031513/: CMakeLists.txt
testcode/02031533/: CMakeLists.txt
testcode/02041440/: CMakeLists.txt
testcode/02051428/: CMakeLists.txt
testcode/02051436/: CMakeLists.txt
testcode/02051438/: CMakeLists.txt
testcode/02051446/: CMakeLists.txt
testcode/02051451/: CMakeLists.txt
testcode/02051455/: CMakeLists.txt
testcode/02051459/: CMakeLists.txt
testcode/02051519/: CMakeLists.txt
testcode/02051527/: CMakeLists.txt
testcode/02061459/: CMakeLists.txt
testcode/02061525/: CMakeLists.txt
testcode/02061536/: CMakeLists.txt
testcode/02061537/: CMakeLists.txt
testcode/02071712/: CMakeLists.txt
testcode/02111545/: CMakeLists.txt
testcode/02111603/: CMakeLists.txt
testcode/02111618/: CMakeLists.txt
testcode/02111624/: CMakeLists.txt
testcode/02111636/: CMakeLists.txt
testcode/02111639/: CMakeLists.txt
testcode/02111645/: CMakeLists.txt
testcode/02111648/: CMakeLists.txt
testcode/02111653/: CMakeLists.txt
testcode/02131423/: CMakeLists.txt
testcode/02131534/: CMakeLists.txt
testcode/02131536/: CMakeLists.txt
testcode/02131538/: CMakeLists.txt
testcode/02131553/: CMakeLists.txt
testcode/02131601/: CMakeLists.txt
testcode/02131605/: CMakeLists.txt
testcode/02131626/: CMakeLists.txt
testcode/02131632/: CMakeLists.txt
testcode/02131636/: CMakeLists.txt
testcode/02131647/: CMakeLists.txt
testcode/02131657/: CMakeLists.txt
testcode/02131702/: CMakeLists.txt
testcode/02131717/: CMakeLists.txt
testcode/02131724/: CMakeLists.txt
testcode/02131739/: CMakeLists.txt
testcode/02191410/: CMakeLists.txt
testcode/02191424/: CMakeLists.txt
testcode/02191432/: CMakeLists.txt
testcode/02191442/: CMakeLists.txt
testcode/02191501/: CMakeLists.txt
testcode/02191551/: CMakeLists.txt
testcode/02201600/: CMakeLists.txt
testcode/02211522/: CMakeLists.txt
testcode/02261434/: CMakeLists.txt
(+618 files in other folders)
