project(02051459)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QString,QTreeWidgetItem,QLabel,CscrToolDialog,Method,Class,QWidget,BuildProFromSpecDialog,RequirementTreeView,QStringList,QPushButton,QModelIndex,Text,QFont,ClassInfo,DialogResult,QHBoxLayout,New,QMenu,ToDoTableView,SameNameMethodHandleDialog,QVBoxLayout,
# Specification Path: 

