project(02111618)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QFont,QHBoxLayout,QMenu,QStringList,BuildProFromSpecDialog,QString,CscrToolDialog,New,QVBoxLayout,QLabel,Text,QModelIndex,Method,SameNameMethodHandleDialog,ClassInfo,QTreeWidgetItem,RequirementTreeView,ToDoTableView,Class,DialogResult,QPushButton,QWidget,
# Specification Path: 

