project(02111624)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QWidget,QHBoxLayout,QModelIndex,Class,RequirementTreeView,QTreeWidgetItem,QMenu,QStringList,ToDoTableView,ClassInfo,SameNameMethodHandleDialog,QVBoxLayout,CscrToolDialog,DialogResult,QFont,BuildProFromSpecDialog,Method,Text,QPushButton,New,QLabel,QString,
# Specification Path: 

