project(02111636)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:BuildProFromSpecDialog,QTreeWidgetItem,DialogResult,QVBoxLayout,New,SameNameMethodHandleDialog,QHBoxLayout,QLabel,CscrToolDialog,QMenu,Class,RequirementTreeView,ToDoTableView,QStringList,Method,QPushButton,QString,QModelIndex,ClassInfo,QFont,QWidget,Text,
# Specification Path: 

