project(02111639)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:Text,Method,QVBoxLayout,QWidget,ClassInfo,SameNameMethodHandleDialog,New,QHBoxLayout,QStringList,QMenu,DialogResult,CscrToolDialog,QTreeWidgetItem,ToDoTableView,BuildProFromSpecDialog,Class,QString,QFont,QLabel,QModelIndex,QPushButton,RequirementTreeView,
# Specification Path: 

