project(02111645)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:ClassInfo,RequirementTreeView,QFont,QTreeWidgetItem,QHBoxLayout,DialogResult,BuildProFromSpecDialog,SameNameMethodHandleDialog,CscrToolDialog,Class,QPushButton,QMenu,Text,QWidget,ToDoTableView,QString,QLabel,QVBoxLayout,New,QModelIndex,QStringList,Method,
# Specification Path: 

