project(02131534)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QModelIndex,BuildProFromSpecDialog,New,QPushButton,RequirementTreeView,CscrToolDialog,SameNameMethodHandleDialog,ClassInfo,QString,Text,QLabel,QFont,QVBoxLayout,Class,DialogResult,Method,QMenu,QTreeWidgetItem,QWidget,QHBoxLayout,ToDoTableView,QStringList,
# Specification Path: 

