project(02131536)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:DialogResult,New,QLabel,SameNameMethodHandleDialog,QModelIndex,QVBoxLayout,Class,QTreeWidgetItem,ToDoTableView,QStringList,CscrToolDialog,RequirementTreeView,QPushButton,QString,QFont,ClassInfo,QWidget,QHBoxLayout,Text,QMenu,BuildProFromSpecDialog,Method,
# Specification Path: 

