project(02131538)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:ClassInfo,QWidget,QVBoxLayout,QString,QMenu,Class,QModelIndex,ToDoTableView,Text,QLabel,QStringList,Method,DialogResult,BuildProFromSpecDialog,QPushButton,RequirementTreeView,QTreeWidgetItem,QHBoxLayout,New,SameNameMethodHandleDialog,QFont,CscrToolDialog,
# Specification Path: 

