project(02131553)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QModelIndex,DialogResult,QPushButton,Text,CscrToolDialog,QMenu,BuildProFromSpecDialog,QHBoxLayout,RequirementTreeView,Method,QTreeWidgetItem,ToDoTableView,QWidget,QVBoxLayout,Class,SameNameMethodHandleDialog,QFont,QLabel,ClassInfo,QString,New,QStringList,
# Specification Path: 

