project(02131601)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:Method,QTreeWidgetItem,QString,CscrToolDialog,BuildProFromSpecDialog,Class,QPushButton,QWidget,Text,QStringList,RequirementTreeView,DialogResult,New,SameNameMethodHandleDialog,QVBoxLayout,QFont,QModelIndex,ToDoTableView,QHBoxLayout,ClassInfo,QMenu,QLabel,
# Specification Path: 

