project(02131605)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QPushButton,Class,SameNameMethodHandleDialog,ClassInfo,CscrToolDialog,RequirementTreeView,DialogResult,QHBoxLayout,QLabel,BuildProFromSpecDialog,QMenu,QStringList,Text,ToDoTableView,New,QTreeWidgetItem,QString,QFont,QVBoxLayout,QWidget,QModelIndex,Method,
# Specification Path: 

