project(02131626)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QPushButton,Method,DialogResult,Text,SameNameMethodHandleDialog,QStringList,BuildProFromSpecDialog,Class,QMenu,QTreeWidgetItem,RequirementTreeView,QString,ToDoTableView,ClassInfo,QHBoxLayout,QVBoxLayout,QWidget,QLabel,CscrToolDialog,QModelIndex,QFont,New,
# Specification Path: 

