project(02131632)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:Class,QLabel,Text,QModelIndex,BuildProFromSpecDialog,QStringList,New,QVBoxLayout,RequirementTreeView,CscrToolDialog,DialogResult,QPushButton,Method,ToDoTableView,QFont,ClassInfo,QString,QWidget,QTreeWidgetItem,QMenu,QHBoxLayout,SameNameMethodHandleDialog,
# Specification Path: 

