project(02131636)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QFont,QWidget,New,QLabel,QStringList,QHBoxLayout,Class,CscrToolDialog,Method,QModelIndex,RequirementTreeView,SameNameMethodHandleDialog,BuildProFromSpecDialog,ClassInfo,QString,QVBoxLayout,DialogResult,ToDoTableView,Text,QTreeWidgetItem,QMenu,QPushButton,
# Specification Path: 

