project(02131647)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:Class,QString,QVBoxLayout,QFont,New,ToDoTableView,QPushButton,QTreeWidgetItem,QHBoxLayout,QLabel,QModelIndex,QWidget,Method,BuildProFromSpecDialog,QStringList,DialogResult,CscrToolDialog,SameNameMethodHandleDialog,Text,QMenu,ClassInfo,RequirementTreeView,
# Specification Path: 

