project(02131657)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QString,SameNameMethodHandleDialog,QMenu,Class,QLabel,QVBoxLayout,QModelIndex,CscrToolDialog,RequirementTreeView,New,Text,QStringList,QWidget,QHBoxLayout,ToDoTableView,BuildProFromSpecDialog,QPushButton,DialogResult,QTreeWidgetItem,ClassInfo,QFont,Method,
# Specification Path: 

