project(02131702)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QHBoxLayout,QWidget,DialogResult,QTreeWidgetItem,Method,QModelIndex,RequirementTreeView,ClassInfo,QStringList,Class,ToDoTableView,QMenu,BuildProFromSpecDialog,CscrToolDialog,Text,SameNameMethodHandleDialog,New,QString,QPushButton,QFont,QVBoxLayout,QLabel,
# Specification Path: 

