project(02131717)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:BuildProFromSpecDialog,QStringList,RequirementTreeView,Class,QWidget,New,QHBoxLayout,QLabel,QString,Text,QPushButton,QTreeWidgetItem,DialogResult,ToDoTableView,Method,CscrToolDialog,QVBoxLayout,QModelIndex,QFont,ClassInfo,SameNameMethodHandleDialog,QMenu,
# Specification Path: 

