project(02131724)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QPushButton,QModelIndex,QTreeWidgetItem,QLabel,QVBoxLayout,Class,New,QHBoxLayout,DialogResult,ClassInfo,ToDoTableView,QFont,Text,SameNameMethodHandleDialog,RequirementTreeView,QWidget,QString,BuildProFromSpecDialog,QMenu,CscrToolDialog,Method,QStringList,
# Specification Path: 

