project(02131739)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QMenu,Text,New,QVBoxLayout,QStringList,QString,DialogResult,BuildProFromSpecDialog,QWidget,SameNameMethodHandleDialog,CscrToolDialog,ClassInfo,RequirementTreeView,QHBoxLayout,QPushButton,Class,QFont,QTreeWidgetItem,ToDoTableView,QModelIndex,QLabel,Method,
# Specification Path: 

