project(02191410)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:New,QHBoxLayout,QTreeWidgetItem,CscrToolDialog,SameNameMethodHandleDialog,QString,RequirementTreeView,QVBoxLayout,Class,QStringList,ToDoTableView,DialogResult,QPushButton,BuildProFromSpecDialog,QFont,QMenu,QWidget,QModelIndex,QLabel,ClassInfo,Method,Text,
# Specification Path: 

