project(02191424)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:DialogResult,RequirementTreeView,QString,Method,ClassInfo,SameNameMethodHandleDialog,QFont,QWidget,QTreeWidgetItem,ToDoTableView,QLabel,QVBoxLayout,QStringList,Text,New,BuildProFromSpecDialog,QModelIndex,QPushButton,QHBoxLayout,QMenu,CscrToolDialog,Class,
# Specification Path: 

