project(02191432)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QLabel,QStringList,QFont,QVBoxLayout,QTreeWidgetItem,RequirementTreeView,SameNameMethodHandleDialog,QHBoxLayout,Class,Text,QString,DialogResult,QMenu,ClassInfo,BuildProFromSpecDialog,QPushButton,ToDoTableView,New,CscrToolDialog,QModelIndex,Method,QWidget,
# Specification Path: 

