project(02191442)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QFont,Class,QStringList,QMenu,Text,QModelIndex,QString,CscrToolDialog,ClassInfo,RequirementTreeView,QVBoxLayout,New,Method,SameNameMethodHandleDialog,QLabel,QHBoxLayout,ToDoTableView,QWidget,QTreeWidgetItem,DialogResult,QPushButton,BuildProFromSpecDialog,
# Specification Path: 

