project(02191501)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:ToDoTableView,Class,QString,DialogResult,QModelIndex,RequirementTreeView,CscrToolDialog,QVBoxLayout,QStringList,Text,BuildProFromSpecDialog,QHBoxLayout,QLabel,ClassInfo,SameNameMethodHandleDialog,Method,QMenu,QTreeWidgetItem,QFont,QPushButton,QWidget,New,
# Specification Path: 

