project(02191551)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QHBoxLayout,QTreeWidgetItem,QMenu,ToDoTableView,Class,QStringList,Method,QLabel,QString,DialogResult,SameNameMethodHandleDialog,CscrToolDialog,New,ClassInfo,BuildProFromSpecDialog,QPushButton,QModelIndex,RequirementTreeView,QVBoxLayout,QWidget,Text,QFont,
# Specification Path: 

