project(02211522)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QWidget,RequirementTreeView,CscrToolDialog,ToDoTableView,QTreeWidgetItem,New,Class,ClassInfo,Method,QHBoxLayout,SameNameMethodHandleDialog,QMenu,QVBoxLayout,QStringList,QPushButton,QLabel,QModelIndex,QFont,Text,BuildProFromSpecDialog,DialogResult,QString,
# Specification Path: 

