project(02261434)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

set(SOURCE_FILES src/main.cpp)

set(HEADER_FILES)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
# Project Info: 
# IncludedClass:QString,ClassInfo,RequirementTreeView,Class,Method,DialogResult,Text,BuildProFromSpecDialog,QModelIndex,QVBoxLayout,ToDoTableView,SameNameMethodHandleDialog,QWidget,QHBoxLayout,QPushButton,New,QLabel,CscrToolDialog,QStringList,QTreeWidgetItem,QFont,QMenu,
# Specification Path: 

